--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.awie</groupId>
 	<artifactId>awie-pet-clinic</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>awie-pet-clinic</name>
 	<description>Awie Pet Clinic Project</description>
 	<packaging>pom</packaging>
@@ -23,15 +23,25 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies></dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goal>install</goal>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
+	
+	<scm>
+		<developerConnection>scm:git:git@github.com:Wie92/awie-pet-clinic.git</developerConnection>
+	  <tag>awie-pet-clinic-0.0.1</tag>
+  </scm>
 </project>
