--- a/awie-pet-clinic-web/src/main/resources/application.properties
+++ b/awie-pet-clinic-web/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=Awie Pet Clinic
 spring.banner.image.location=pet-clinic.jpeg
+
+
+spring.messages.basename=messages/messages
