updated profiles for JPA Service, tested active profiles. Closes #48

--- a/awie-pet-clinic-web/src/main/resources/application.properties
+++ b/awie-pet-clinic-web/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Awie Pet Clinic
 spring.banner.image.location=pet-clinic.jpeg
 
-
+# Internalizaiton
 spring.messages.basename=messages/messages
+
+spring.profiles.active=springdatajpa
