--- a/awie-pet-clinic-web/pom.xml
+++ b/awie-pet-clinic-web/pom.xml
@@ -74,16 +74,35 @@
 	    </dependency>
 		<!-- end of webjars -->
 		
+		<!-- Add exclusion for junit4 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+		
+		<!-- Junit 5 -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- end of Junit 5 -->
   	</dependencies>
   	
     <build>
         <plugins>
-
 			<plugin>
 	        	<groupId>ro.isdc.wro4j</groupId>
 		        <artifactId>wro4j-maven-plugin</artifactId>
@@ -116,7 +135,17 @@
 		          	</dependency>
         		</dependencies>
 			</plugin>
-
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.junit.platform</groupId>
+						<artifactId>junit-platform-surefire-provider</artifactId>
+						<version>${junit-platform.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
         </plugins>
 	</build>
   	
