--- a/awie-pet-clinic-data/pom.xml
+++ b/awie-pet-clinic-data/pom.xml
@@ -65,6 +65,14 @@
 		</dependency>
 		<!-- end of Junit 5 -->
 		
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
+		    <version>2.23.4</version>
+		    <scope>test</scope>
+		</dependency>
+		
   	</dependencies>
   	
  	<build>
