--- a/awie-pet-clinic-web/pom.xml
+++ b/awie-pet-clinic-web/pom.xml
@@ -150,7 +150,7 @@
 					<dependency>
 						<groupId>org.junit.platform</groupId>
 						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>5.3.2</version>
+						<version>${junit.jupiter.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
