--- a/awie-pet-clinic-web/pom.xml
+++ b/awie-pet-clinic-web/pom.xml
@@ -143,7 +143,17 @@
 		          	</dependency>
         		</dependencies>
 			</plugin>
-
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.junit.platform</groupId>
+						<artifactId>junit-platform-surefire-provider</artifactId>
+						<version>${junit.jupiter.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
         </plugins>
 	</build>
   	
